--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Journey to Space</title>
+  <title>Space Journey</title>
   <style>
     body { margin: 0; overflow: hidden; background: black; }
     canvas { display: block; }
@@ -49,12 +49,13 @@
   <div id="fade"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/three@0.160.1/build/three.min.js"></script>
+
   <script>
     let scene, camera, renderer;
     let mainCube;
     let smallCubes = [];
-    let exploded = false;
     let stars = [];
+    let exploded = false;
 
     init();
     animate();
@@ -135,13 +136,13 @@
 
     function fadeToScene(callback) {
       const fade = document.getElementById('fade');
-      fade.style.opacity = '1'; // fade to black
+      fade.style.opacity = '1';
 
       setTimeout(() => {
         document.getElementById('journeyText').style.display = 'none';
         clearScene();
-        callback(); // start space scene
-        fade.style.opacity = '0'; // fade into space
+        callback();
+        fade.style.opacity = '0';
       }, 2000);
     }
 
@@ -154,19 +155,53 @@
     }
 
     function showSpaceScene() {
-      for (let i = 0; i < 1000; i++) {
-        const geometry = new THREE.SphereGeometry(0.01, 4, 4);
-        const material = new THREE.MeshBasicMaterial({ color: 0xffffff });
-        const star = new THREE.Mesh(geometry, material);
-
+      // Add stars
+      const starGeometry = new THREE.SphereGeometry(0.015, 4, 4);
+      for (let i = 0; i < 3000; i++) {
+        const starMaterial = new THREE.MeshBasicMaterial({ color: 0xffffff });
+        const star = new THREE.Mesh(starGeometry, starMaterial);
         star.position.set(
-          (Math.random() - 0.5) * 100,
-          (Math.random() - 0.5) * 100,
-          (Math.random() - 0.5) * 100
+          (Math.random() - 0.5) * 200,
+          (Math.random() - 0.5) * 200,
+          (Math.random() - 0.5) * 200
         );
-
+        star.floatOffset = Math.random() * Math.PI * 2;
         scene.add(star);
         stars.push(star);
+      }
+
+      // Add a planet
+      const planetGeometry = new THREE.SphereGeometry(1, 32, 32);
+      const planetMaterial = new THREE.MeshStandardMaterial({
+        color: 0x2266ff,
+        emissive: 0x112244,
+        roughness: 0.8,
+      });
+      const planet = new THREE.Mesh(planetGeometry, planetMaterial);
+      planet.position.set(5, 2, -10);
+      planet.rotationSpeed = 0.002;
+      planet.floatOffset = Math.random() * Math.PI * 2;
+      scene.add(planet);
+      stars.push(planet);
+
+      // Add space debris
+      for (let i = 0; i < 20; i++) {
+        const geo = Math.random() < 0.5
+          ? new THREE.BoxGeometry(0.2, 0.2, 0.2)
+          : new THREE.PlaneGeometry(0.4, 0.4);
+
+        const mat = new THREE.MeshStandardMaterial({ color: 0x999999, side: THREE.DoubleSide });
+        const debris = new THREE.Mesh(geo, mat);
+        debris.position.set(
+          (Math.random() - 0.5) * 30,
+          (Math.random() - 0.5) * 30,
+          (Math.random() - 0.5) * 30
+        );
+        debris.rotationSpeed = Math.random() * 0.01;
+        debris.floatOffset = Math.random() * Math.PI * 2;
+
+        scene.add(debris);
+        stars.push(debris);
       }
     }
 
@@ -183,9 +218,19 @@
           cube.rotation.y += 0.01;
         });
 
-        // After space appears, move the camera forward slowly
         if (stars.length > 0) {
           camera.position.z -= 0.02;
+
+          const time = performance.now() * 0.001;
+          stars.forEach(obj => {
+            obj.position.y += Math.sin(time + obj.floatOffset || 0) * 0.0005;
+            obj.position.x += Math.cos(time + obj.floatOffset || 0) * 0.0005;
+
+            if (obj.rotation) {
+              obj.rotation.y += obj.rotationSpeed || 0;
+              obj.rotation.x += obj.rotationSpeed || 0;
+            }
+          });
         }
       }
 
